--- a/menu.html
+++ b/menu.html
@@ -39,20 +39,20 @@
         
     </div>
 
-    <div id="main-container" class="container" style="z-index: 10; overflow: scroll;">
+    <div id="main-container" class="container" style="z-index: 10; overflow: scroll; justify-self: center; align-items: center; text-align: center;">
         
-        <div style="margin: 20px; text-align: right; display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 10px;">
+        <div style="margin: 20px; text-align: right; display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 20px;">
             <div class="menu-page-button" onclick="location.href='sell.html'"><h3 style="margin: auto;">POS</h3>
-                <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Card_Terminal_POS_Flat_Icon_Vector.svg/1024px-Card_Terminal_POS_Flat_Icon_Vector.svg.png?20180301080914" alt="">
+                <img width="180px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Card_Terminal_POS_Flat_Icon_Vector.svg/1024px-Card_Terminal_POS_Flat_Icon_Vector.svg.png?20180301080914" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='order.html'"><h3 style="margin: auto;">COMPRAS</h3>
-                <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Shopping_Basket_Flat_Icon_Vector.svg/1200px-Shopping_Basket_Flat_Icon_Vector.svg.png" alt="">
+                <img width="180px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Shopping_Basket_Flat_Icon_Vector.svg/1200px-Shopping_Basket_Flat_Icon_Vector.svg.png" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='inventario.html'"><h3 style="margin: auto;">INVENTARIO</h3>
-                <img width="200px" style="mix-blend-mode: darken;" src="https://i.pinimg.com/736x/4f/11/e6/4f11e623f48c7cb463ea2f60deea1e40.jpg" alt="">
+                <img width="180px" style="mix-blend-mode: darken;" src="https://i.pinimg.com/736x/4f/11/e6/4f11e623f48c7cb463ea2f60deea1e40.jpg" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='consumos.html'"><h3 style="margin: auto;">CONSUMOS</h3>
-                <img width="200px" src="https://cdn-icons-png.freepik.com/512/5246/5246231.png" alt="">
+                <img width="180px" src="https://cdn-icons-png.freepik.com/512/5246/5246231.png" alt="">
             </div>
         </div>
     </div> 
