--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
                 <img width="180px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Shopping_Basket_Flat_Icon_Vector.svg/1200px-Shopping_Basket_Flat_Icon_Vector.svg.png" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='inventario.html'"><h3 style="margin: auto;">INVENTARIO</h3>
-                <img width="180px" style="mix-blend-mode: darken;" src="https://i.pinimg.com/736x/4f/11/e6/4f11e623f48c7cb463ea2f60deea1e40.jpg" alt="">
+                <img width="140px" style="mix-blend-mode: darken; margin: 20px;" src="https://cdn-icons-png.flaticon.com/512/679/679922.png" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='consumos.html'"><h3 style="margin: auto;">CONSUMOS</h3>
                 <img width="180px" src="https://cdn-icons-png.freepik.com/512/5246/5246231.png" alt="">
