--- a/inventario.html
+++ b/inventario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Calesa Order</title>
+    <title>Calesa Inventory</title>
     <link rel="stylesheet" href="main.css">
     <script type="module" src="dbconfig.js"></script>
     <link rel="stylesheet" href="headerfooter.css">
@@ -24,7 +24,7 @@
 
     <div id="header" style="display: flex ; z-index: 0;">
         <div id="header-left">
-            <button onclick="location.href='order.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 0px;">
+            <button onclick="location.href='menu.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 0px;">
                 <h1 style="color:  white; margin-top: 0px;">CALESA</h1>
                 <h4 style="color: white;">coffee shop</h2>
             </button>
