--- a/sell.html
+++ b/sell.html
@@ -44,7 +44,7 @@
 
     <div id="main-container" class="container">
         <div style="display: flex; padding: 20px; padding-bottom: 0px;">
-            <div style="width: 100%; height: 80px; text-align: left; overflow: scroll; border: 1px solid rgb(179, 179, 179); border-radius: 20px;">
+            <div style="width: 100%; height: 80px; text-align: left; overflow: scroll; border: 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.20); border-radius: 20px; background-color: rgb(240, 240, 240);">
                 <ul style="list-style: none;">
                     <li class="selected-product">Item 1</li>
                     <li class="selected-product">Item 1</li>
@@ -53,7 +53,7 @@
                     <li class="selected-product">Item 1</li>
                 </ul>
             </div>
-            <div style="padding-left: 10px; width: 100px; text-align: left;"><h4>Total:</h4><h4 id="order-total">$100</span></div>
+            <div style="padding-left: 20px; width: 100px; text-align: left;"><h4>Total:</h4><h4 id="order-total">$100</span></div>
         </div>
         <div id="product-list" style="display: flex; flex-direction: row; flex-wrap: wrap; padding: 20px;"> 
             <div class="product-item">Item 1</div>
