--- a/sell.html
+++ b/sell.html
@@ -55,7 +55,7 @@
             </div>
             <div style="padding-left: 20px; width: 100px; text-align: left;"><h4>Total:</h4><h4 id="order-total">$100</span></div>
         </div>
-        <div id="product-list" style="display: flex; flex-direction: row; flex-wrap: wrap; padding: 20px;"> 
+        <div id="product-list" style="display: flex; flex-direction: row; flex-wrap: wrap; padding: 20px; overflow: scroll;"> 
             <div class="product-item">Item 1</div>
             <div class="product-item">Item 2</div>
             <div class="product-item">Item 3</div>
