--- a/sell.html
+++ b/sell.html
@@ -52,7 +52,7 @@
             <div style="padding-left: 20px; width: 100px; text-align: left;"><h4>Total:</h4><h4 id="order-total">0</h4></div>
         </div>
         
-        <div style="overflow: scroll; height: 60%; padding-bottom: 0px;">
+        <div style="overflow: scroll; height: 60%; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;">
             <ul id="product-list" style="list-style: none; padding: 0px;"> 
             </ul>
         </div>
