--- a/sell.html
+++ b/sell.html
@@ -45,7 +45,7 @@
     <div id="main-container" class="container">
         <div style="display: flex; padding: 20px; padding-bottom: 10px;">
             <div style="width: 100%; height: 80px; text-align: left; overflow: scroll; border: 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.20); border-radius: 20px; background-color: rgb(240, 240, 240);">
-                <ul style="list-style: none;" id="product-order">
+                <ul style="list-style: none; width: 100%; margin-right: 20px;" id="product-order">
                     
                 </ul>
             </div>
