--- a/sell.html
+++ b/sell.html
@@ -58,8 +58,8 @@
         </div>
         
         <div>
-            <button class="card-button">CARD</button>
-            <button class="cash-button" style="background-color: rgb(51, 156, 51); color: white;">CASH</button>
+            <button class="card-button" onclick="resetOrder('card')">CARD</button>
+            <button class="cash-button" onclick="resetOrder('cash')" style="background-color: rgb(51, 156, 51); color: white;">CASH</button>
         </div>
     </div>
 
