--- a/sell.html
+++ b/sell.html
@@ -57,14 +57,14 @@
         </div>
         
         <div style="display: flex; align-items: center; justify-content: center; text-align: center;">
-            <div class="card-button" style="background-color: rgb(197, 39, 39); color: white;" onclick="resetOrder('none')">
+            <div class="card-button" style="background-color: rgb(197, 39, 39); color: white; border-bottom-left-radius: 15px;" onclick="resetOrder('none')">
                 CLEAR
             </div>
             <div class="card-button" onclick="resetOrder('none')" style="background-color: rgb(161, 161, 161);">
                 <img src="https://cdn-icons-png.flaticon.com/512/318/318218.png" width="30px" alt="">
             </div>
             <div class="card-button" onclick="resetOrder('card')">CARD</div>
-            <div class="cash-button" onclick="resetOrder('cash')" style="background-color: rgb(51, 156, 51); color: white;">CASH</div>
+            <div class="cash-button" onclick="resetOrder('cash')" style="background-color: rgb(51, 156, 51); color: white; border-bottom-right-radius: 15px;">CASH</div>
         </div>
     </div>
 
