--- a/menu.html
+++ b/menu.html
@@ -14,9 +14,8 @@
 
     <div id="header" style="display: flex ; z-index: 0;">
         <div id="header-left">
-            <button onmouseenter="document.getElementById('icon-1').style.width = '200px'" onclick="location.href='menu.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 0px;">
-                <h1 style="color:  white; margin-top: 0px;">CALESA</h1>
-                <h4 style="color: white;">coffee shop</h2>
+            <button onclick="location.href='menu.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 10px; text-align: left; margin: 0px;">
+                <img src="calesa_logo_white.png" height="50px" alt="">
             </button>
         </div>
         <div id="header-right" style="width: 50%;">
@@ -53,6 +52,9 @@
             </div>
             <div class="menu-page-button" onmouseenter="document.getElementById('icon-4').style.width = '190px'"onmouseleave="document.getElementById('icon-4').style.width='180px'" onclick="location.href='consumos.html'"><h3 style="margin: auto;">CONSUMOS</h3>
                 <img id="icon-4" style="transition: 0.2s;" width="180px" src="https://cdn-icons-png.freepik.com/512/5246/5246231.png" alt="">
+            </div>
+            <div class="menu-page-button" onmouseenter="document.getElementById('icon-5').style.width = '150px'"onmouseleave="document.getElementById('icon-5').style.width='140px'" onclick="location.href='salesReport.html'"><h3 style="margin: auto;">VENTAS</h3><br>
+                <img id="icon-5" style="transition: 0.2s;" width="140px" src="https://cdn3.iconfinder.com/data/icons/finance-and-banking-3/129/109-512.png" alt="">
             </div>
         </div>
     </div> 
