--- a/sell.html
+++ b/sell.html
@@ -17,9 +17,8 @@
 
     <div id="header" style="display: flex ; z-index: 0;">
         <div id="header-left">
-            <button onclick="location.href='menu.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 0px;">
-                <h1 style="color: white; margin-top: 0px;">CALESA</h1>
-                <h4 style="color: white;">coffee shop</h2>
+            <button onclick="location.href='menu.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 10px; text-align: left; margin: 0px;">
+                <img src="calesa_logo_white.png" height="50px" alt="">
             </button>
         </div>
         <div id="header-right" style="width: 50%;">
