--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
     <div id="header" style="display: flex ;">
         <div id="header-left">
-            <button class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 0px;">
-                <h1 style="color: white; margin-top: 0px;">CALESA</h1>
-                <h4 style="color: white">coffee shop</h2>
+            <button class="logo-button" style="background-color: transparent; border: 0px; padding: 1ch; text-align: left; margin: 0px;">
+                <img src="calesa_logo_white.png" height="50px" alt="">
             </button>
         </div>
     </div>
