--- a/salesReport.html
+++ b/salesReport.html
@@ -21,16 +21,16 @@
         <h3>Ventas</h3>
         <h4>Resumen de ventas, selecciona fechas:</h6>
             <br>
-            <div style="display: flex; margin-left: auto; margin-right: auto; gap: 10px; flex-wrap: wrap; width: 90%;">
-                <div style="width: 48%; max-width: 300px; height: auto; align-items: left; justify-content: left; padding: 0; text-align: left;">
+            <div style="display: flex; margin-left: auto; margin-right: auto; flex-wrap: wrap; width: 100%; column-gap: 8px; row-gap: 16px;">
+                <div style="width: 46%; max-width: 300px; height: auto; align-items: left; justify-content: left; padding: 0; text-align: left;">
                     <h5>Desde:</h5>
                     <input type="date" name="" id="from-date">
                 </div>
-                <div style="width: 48%; max-width: 300px; height: auto; align-items: left; justify-content: left; padding: 0; text-align: left;">
+                <div style="width: 46%; max-width: 300px; height: auto; align-items: left; justify-content: left; padding: 0; text-align: left;">
                     <h5>Hasta:</h5>
                     <input type="date" name="" id="to-date">
                 </div>
-                <div style="display: flex; justify-content: baseline;">
+                <div style="display: flex; justify-content: left; width: 100%; text-align: right;">
                     <button>Buscar</button>
                 </div>
                 
