--- a/salesReport.html
+++ b/salesReport.html
@@ -10,11 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header-banner">
+    <div id="header-banner" >
         <div class="header-logo-container" style="padding: 20px; height: 50px; z-index: 1;"> 
             <img src="calesa_logo_black.png" alt="" class="header-logo" height="50px" style="z-index: 1; position: fixed;">
+            <h4 style="position: fixed; right: 0; margin-right: 10px; font-weight: 300; font-size: 14px; margin-top: 10px;">Actualizado en:</h4>
+            <h4 style="position: fixed; right: 0; top: 0; margin-right: 10px; margin-top: 50px; font-weight: 300; font-size: 14px;">13/02/2024</h4>
         </div>
-
         
     </div>
   
@@ -37,7 +38,7 @@
             
                 <div style="margin-top: 0px; text-align: right; width: 100%;">
                     <h3 style="text-align: right;">Total:</h3>
-                    <h3 id="sales-total-from-dates" style="font-weight: 100; font-size: 20px; text-align: right;">$ 3,000</h3>
+                    <h3 id="sales-total-from-dates" style="font-weight: 300; font-size: 18px; text-align: right;">$ 3,000</h3>
                 </div>
                 <ul id="sales-from-dates" style="height: 250px; background-color: rgb(230, 230, 230); width: 100%; border-radius: 10px; overflow: scroll; padding: 10px;"> 
                     <li>10000</li>
