--- a/salesReport.html
+++ b/salesReport.html
@@ -9,15 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div id="header-banner" >
         <div class="header-logo-container" style="padding: 20px; height: 50px; z-index: 1;"> 
             <img src="calesa_logo_black.png" alt="" class="header-logo" height="50px" style="z-index: 1; position: fixed;">
             <h4 style="position: fixed; right: 0; margin-right: 10px; font-weight: 300; font-size: 14px; margin-top: 10px;">Actualizado en:</h4>
-            <h4 style="position: fixed; right: 0; top: 0; margin-right: 10px; margin-top: 50px; font-weight: 300; font-size: 14px;">13/02/2024</h4>
+            <h4 style="position: fixed; right: 0; top: 0; margin-right: 10px; margin-top: 50px; font-weight: 300; font-size: 14px;" id="last-update"></h4>
         </div>
         
     </div>
+    <script>
+        let lastUpdate = String(new Date()).substring(0,25)
+        document.getElementById('last-update').innerHTML = lastUpdate
+    </script>
   
     <div style="z-index: 20; display: flex; flex-direction: column; text-align: center; margin-left: auto; margin-right: auto; border-radius: 20px; background-color: #FAFAFA; height: 100%; width: auto; padding: 24px; box-shadow: 0px -5px 8px 0px rgba(0, 0, 0, 0.08); position: relative;">
         <h3>Ventas</h3>
