--- a/consumos.html
+++ b/consumos.html
@@ -11,11 +11,7 @@
     <script type="module" src="getConsupmtion.js"></script>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript">
-
-        
-
-</script>
+    <script type="text/javascript"></script>
 
  
 </head>
