change button copy

--- a/salesReport.html
+++ b/salesReport.html
@@ -42,7 +42,7 @@
                     <input type="date" name="" id="to-date">
                 </div>
                 <div style="display: flex; justify-content: left; width: 100%; text-align: right;">
-                    <button id="search">Buscar</button>
+                    <button id="search">Actualizar</button>
                 </div>
 
                 <div id="chart_div" style="width:120%; height:300px;"></div>
