--- a/sell.html
+++ b/sell.html
@@ -43,7 +43,7 @@
 
     <div id="main-container" class="container">
         <div style="display: flex; padding: 20px; padding-bottom: 10px;">
-            <div style="width: 100%; height: 60px; text-align: left; overflow: scroll; border: 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.20); border-radius: 20px; background-color: rgb(240, 240, 240);">
+            <div style="width: 100%; height: 60px; text-align: left; overflow: scroll; border: 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.20); background-color: rgb(240, 240, 240);">
                 <ul style="list-style: none; width: 100%; margin-right: 20px;" id="product-order">
                 </ul>
             </div>
@@ -56,14 +56,14 @@
         </div>
         
         <div style="display: flex; align-items: center; justify-content: center; text-align: center;">
-            <div class="card-button" style="background-color: rgb(197, 39, 39); color: white; border-bottom-left-radius: 15px;" onclick="resetOrder('none')">
+            <div class="card-button" style="background-color: rgb(197, 39, 39); color: white;" onclick="resetOrder('none')">
                 CLEAR
             </div>
             <div class="card-button" onclick="resetOrder('none')" style="background-color: rgb(161, 161, 161);">
                 <img src="https://cdn-icons-png.flaticon.com/512/318/318218.png" width="30px" alt="">
             </div>
             <div class="card-button" onclick="resetOrder('card')">CARD</div>
-            <div class="cash-button" onclick="resetOrder('cash')" style="background-color: rgb(51, 156, 51); color: white; border-bottom-right-radius: 15px;">CASH</div>
+            <div class="cash-button" onclick="resetOrder('cash')" style="background-color: rgb(51, 156, 51); color: white;">CASH</div>
         </div>
     </div>
 
