removing last item

--- a/sell.html
+++ b/sell.html
@@ -59,7 +59,7 @@
             <div class="card-button" style="background-color: rgb(197, 39, 39); color: white;" onclick="resetOrder('none')">
                 CLEAR
             </div>
-            <div class="card-button" onclick="resetOrder('none')" style="background-color: rgb(161, 161, 161);">
+            <div class="card-button" onclick="removeLastItem()" style="background-color: rgb(161, 161, 161);">
                 <img src="https://cdn-icons-png.flaticon.com/512/318/318218.png" width="30px" alt="">
             </div>
             <div class="card-button" onclick="resetOrder('card')">CARD</div>
