--- a/sell.html
+++ b/sell.html
@@ -43,14 +43,14 @@
 
     <div id="main-container" class="container">
         <div style="display: flex; padding: 20px; padding-bottom: 10px;">
-            <div style="width: 100%; height: 60px; text-align: left; overflow: scroll; border: 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.20); background-color: rgb(240, 240, 240);">
+            <div style="width: 100%; height: 60px; text-align: left; overflow: scroll; border: 0; box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.20); background-color: rgb(240, 240, 240); border-top-left-radius: 20px;">
                 <ul style="list-style: none; width: 100%; margin-right: 20px;" id="product-order">
                 </ul>
             </div>
-            <div style="padding-left: 20px; width: 80px; text-align: center;"><h4>Total:</h4><h4 id="order-total">0</h4></div>
+            <div style="padding-left: 20px; width: 60px; text-align: center;"><h4>Total:</h4><h4 id="order-total">0</h4></div>
         </div>
         
-        <div style="overflow: scroll; height: 65%; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;">
+        <div style="overflow: scroll; height: 65%; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;  border-top-left-radius: 20px;">
             <ul id="product-list" style="list-style: none; padding: 0px;"> 
             </ul>
         </div>
