--- a/salesReport.html
+++ b/salesReport.html
@@ -16,10 +16,10 @@
 
 <body>
     <div id="header-banner" >
-        <div class="header-logo-container" style="padding: 20px; height: 50px; z-index: 1;" onmousedown="location.href='menu.html'"> 
-            <img src="calesa_logo_black.png" alt="" class="header-logo" height="50px" style="z-index: 1; position: fixed;" onclick="location.href='menu.html'">
+        <div class="header-logo-container" style="padding: 20px; height: 50px; z-index: 1;"> 
+            <img src="calesa_logo_black.png" alt="" class="header-logo" height="50px" style="z-index: 1; position: fixed;" onmousedown="location.href = 'menu.html'">
             <h4 style="position: fixed; right: 0; margin-right: 10px; font-weight: 300; font-size: 14px; margin-top: 10px;">Actualizado en:</h4>
-            <h4 style="position: fixed; right: 0; top: 0; margin-right: 10px; marsgin-top: 50px; font-weight: 300; font-size: 14px;" id="last-update"></h4>
+            <h4 style="position: fixed; right: 0; top: 0; margin-right: 10px; margin-top: 50px; font-weight: 300; font-size: 14px;" id="last-update"></h4>
         </div>
         
     </div>
