--- a/sell.html
+++ b/sell.html
@@ -60,8 +60,8 @@
         </div>
         
         <div style="display: flex; align-items: center; justify-content: center; text-align: center;">
-            <div class="card-button" style="background-color: rgb(197, 39, 39); color: white;" onclick="resetOrder('none')">
-                CLEAR
+            <div class="card-button" style="background-color: rgb(197, 39, 39); color: white;" onclick="getCorte()">
+                CORTE
             </div>
             <div class="card-button" onclick="removeLastItem()" style="background-color: rgb(161, 161, 161);">
                 <img src="https://cdn-icons-png.flaticon.com/512/318/318218.png" width="30px" alt="">
