--- a/receipt.html
+++ b/receipt.html
@@ -21,13 +21,13 @@
         <span id="date-time"></span>
     </div>
 
-    <div>
-        <ul id="ordered-items" style="list-style: none; padding: 10px;">
+    <div style="padding: 20px;">
+        <ul id="ordered-items" style="list-style: none; padding-left: 10px;">
 
         </ul>
     </div>
 
-    <div style="text-align: right; padding-right: 20px; font-weight: 800;">
+    <div style="text-align: right; padding-right: 10%; font-weight: 800;">
         Total: $<span id="order-total"></span>
     </div><br>
 
@@ -60,6 +60,8 @@
         }
 
         print()
+        setTimeout(() => {location.href = "sell.html"},10000)
+        
        
     </script>
 
