--- a/sell.html
+++ b/sell.html
@@ -9,6 +9,7 @@
     <script type="module" src="dbconfig.js"></script>
     <script type="module" src="header.js"></script>
     <script type="module" src="sell.js"></script>
+    <script type="module" src="pay.js"></script>
 
 
 </head>
@@ -66,8 +67,8 @@
             <div class="card-button" onclick="removeLastItem()" style="background-color: rgb(161, 161, 161);">
                 <img src="https://cdn-icons-png.flaticon.com/512/318/318218.png" width="30px" alt="">
             </div>
-            <div class="card-button" onclick="resetOrder('card')">CARD</div>
-            <div class="cash-button" onclick="resetOrder('cash')" style="background-color: rgb(51, 156, 51); color: white;">CASH</div>
+            <div class="card-button" onclick="registerSales('card')">CARD</div>
+            <div class="cash-button" onclick="registerSales('cash')" style="background-color: rgb(51, 156, 51); color: white;">CASH</div>
         </div>
     </div>
 
