removed header id

--- a/sell.html
+++ b/sell.html
@@ -24,13 +24,13 @@
         </div>
         <div id="header-right" style="width: 50%;">
             <div id="header-0">
-                <button class="header-icon-button" style="padding: 5px;" onclick="registerExpense()" id="add-button">
-                    <img class="icon" id="filter-icon" width="40px" style="margin: 0px; filter: invert(); mix-blend-mode: lighten;" src="https://static.vecteezy.com/system/resources/previews/030/926/575/original/reduce-expense-icon-symbol-design-illustration-vector.jpg">
+                <button class="header-icon-button" style="padding: 5px;" onclick="registerExpense()">
+                    <img class="icon" width="40px" style="margin: 0px; filter: invert(); mix-blend-mode: lighten;" src="https://static.vecteezy.com/system/resources/previews/030/926/575/original/reduce-expense-icon-symbol-design-illustration-vector.jpg">
                 </button>
             </div>
             <div id="header-1">
-                <button class="header-icon-button" onclick="getCorte()" id="filter-button" onmouseover="document.getElementById('filter-icon').style.filter = 'invert()'" onmouseover="document.getElementById('filter-icon').style.filter = 'invert()'" onmouseleave="document.getElementById('filter-icon').style.filter = 'none'">
-                    <img class="icon" id="filter-icon" width="30px" style="margin: 0px; filter: invert(); mix-blend-mode: lighten;" src="https://www.pngfind.com/pngs/m/634-6341755_png-file-sales-data-icon-transparent-png.png">
+                <button class="header-icon-button" onclick="getCorte()" onmouseover="document.getElementById('filter-icon').style.filter = 'invert()'" onmouseover="document.getElementById('filter-icon').style.filter = 'invert()'" onmouseleave="document.getElementById('filter-icon').style.filter = 'none'">
+                    <img class="icon" width="30px" style="margin: 0px; filter: invert(); mix-blend-mode: lighten;" src="https://www.pngfind.com/pngs/m/634-6341755_png-file-sales-data-icon-transparent-png.png">
                 </button>
             </div>
             <div id="header-2">
