product list height in vw

--- a/sell.html
+++ b/sell.html
@@ -57,7 +57,7 @@
             <div style="padding-left: 20px; width: 60px; text-align: center;"><h4>Total:</h4><h4 id="order-total">0</h4></div>
         </div>
         
-        <div style="z-index: 10; position: relative; overflow: scroll; height: 65%; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;  border-top-left-radius: 20px;">
+        <div style="z-index: 10; position: relative; overflow: scroll; height: 90vw; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;  border-top-left-radius: 20px;">
             <ul id="product-list" style="list-style: none; padding: 0px;"> 
             </ul>
         </div>
