--- a/inventario.html
+++ b/inventario.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="headerfooter.css">
     <script type="module" src="header.js"></script>
     <script type="module" src="getInventory.js"></script>
+    <link rel="stylesheet" href="popups.css">
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
@@ -48,7 +49,6 @@
         <div style="display: flex; padding: 20px;">
             <div style="width: 100%; text-align: left;"><h2>Articulo</h2></div>
             <div style="width: 120px;">Inv.</div>
-            <div style="width: 120px;">Consum.</div>
             <div style="width: 120px;">Pedido.</div>
         </div>
         <div style="overflow: scroll;">
