--- a/users.html
+++ b/users.html
@@ -43,7 +43,7 @@ can enter to userinfo with url param
         
     </div>
 
-    <div id="main-container" class="container" style="z-index: 10; overflow: scroll; justify-self: center; align-items: center; text-align: center;">
+    <div id="main-container" class="container" style="z-index: 10; overflow: hidden; justify-self: center; align-items: center; text-align: center;">
         <div id="add-new-bar" style="display: flex; align-items: center; padding: 20px;">
             <div style="width: 50%; height: 40px; text-align: left;">
                 <h2>Usuarios</h2>
@@ -52,7 +52,7 @@ can enter to userinfo with url param
                 <button id="add-new-user-button">Nuevo +</button>
             </div>
         </div>
-        <div style="padding: 20px;">
+        <div style="padding: 10px;">
             <ul id="user-list">
             </ul>
         </div>
