--- a/userinfo.html
+++ b/userinfo.html
@@ -39,26 +39,18 @@
         <div id="add-new-bar" style="display: flex; align-items: center; padding: 20px;">
             <div style="width: 50%; height: 40px; text-align: left;">
                 <h2 id="user-id"></h2>
-     <br>
-                <div style="display: flex; flex-direction: column; width: 100%;">
-                    <div style="width: 50%;">Can View:</div><div id="canView-button">Not determined</div>
-                </div>
-                <div style="display: flex; flex-direction: column;">
-                    <div style="width: 50%;">Can Edit:</div> <div id="canEdit-button">Not determined</div>
-                </div>
-                <div style="display: flex; flex-direction: column;"></div>
-                    <div style="width: 50%;">Can Add:</div><div id="canAdd-button">Not determined</div>
-                </div>
-                <div style="display: flex; flex-direction: column;"></div>
-                    <div style="width: 50%;">Can Delete:</div><div id="canDelete-button">Not determined</div>
-                </div>
-                <div style="display: flex; flex-direction: column;"></div>
-                    <div style="width: 50%;">Can Sell:</div><div id="canSell-button">Not determined</div>
-                </div>
-                <div style="display: flex; flex-direction: column;"></div>
-                    <div style="width: 50%;">Can Buy:</div><div id="canBuy-button">Not determined</div>
-
-                </div>
+                <br>
+                Can View:<span id="canView-button">Not determined</span>
+                <br>
+                Can Edit: <span id="canEdit-button">Not determined</span>
+                <br>
+                Can Add:<span id="canAdd-button">Not determined</span>
+                <br>
+                Can Delete:<span id="canDelete-button">Not determined</span>
+                <br>
+                Can Sell:<span id="canSell-button">Not determined</span>
+                <br>
+                Can Buy:<span id="canBuy-button">Not determined</span>
             </div>
             
         </div>
