add users in menu

--- a/menu.html
+++ b/menu.html
@@ -52,6 +52,9 @@
             <div class="menu-page-button" onmouseenter="document.getElementById('icon-5').style.width = '150px'"onmouseleave="document.getElementById('icon-5').style.width='140px'" onclick="location.href='salesReport.html'"><h3 style="margin: auto;">VENTAS</h3><br>
                 <img id="icon-5" style="transition: 0.2s;" width="140px" src="https://cdn3.iconfinder.com/data/icons/finance-and-banking-3/129/109-512.png" alt="">
             </div>
+            <div class="menu-page-button" onmouseenter="document.getElementById('icon-6').style.width = '150px'"onmouseleave="document.getElementById('icon-6').style.width='140px'" onclick="location.href='users.html'"><h3 style="margin: auto;">USUARIOS</h3><br>
+                <img id="icon-6" style="transition: 0.2s; mix-blend-mode: multiply;" width="140px" src="https://d1nhio0ox7pgb.cloudfront.net/_img/g_collection_png/standard/512x512/users_relation.png" alt="">
+            </div>
         </div>
     </div> 
 </body>
