--- a/users.html
+++ b/users.html
@@ -16,6 +16,8 @@ can enter to userinfo with url param
     <link rel="stylesheet" href="headerfooter.css">
     <script type="module" src="dbconfig.js"></script>
     <script type="module" src="getUserData.js"></script>
+
+    <script type="module" src="header.js"></script>
  
 </head>
 <body>
