--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="headerfooter.css">
     <script type="module" src="dbconfig.js"></script>
+    <script type="module" src="header.js"></script>
  
 </head>
 <body>
