--- a/userinfo.html
+++ b/userinfo.html
@@ -37,11 +37,10 @@
     </div>
 
     <div id="main-container" class="container" style="z-index: 10; overflow: hidden; justify-self: center; align-items: center; text-align: center;">
-        <div id="add-new-bar" style="display: flex; align-items: center; padding: 20px;">
-            <div style="width: 100%; height: 40px; text-align: center; align-content: center;">
-                <h2 id="user-id"></h2>
-                <br>
-
+        <br>    
+        <h2 id="user-id"></h2>
+        <br>
+            <div style="width: 170px; text-align: center; align-content: center; padding: 20px; margin-left: auto; margin-right: auto;">
                 <div style="display: flex; flex-direction: row; align-items: center; align-content: center; width: 180px;">
                     <div style="width: 100px; justify-content: center; text-align: left;"><span>Can View:</span></div> 
                     <div style="width: 80px; height: 30px;" id="canView-toggle-container"></div>
@@ -73,11 +72,6 @@
                 </div>
                 <br>
             </div>
-            
-        </div>
-        <div style="padding: 10px;">
-            
-        </div>
     </div> 
 </body>
 </html>
