added monthly sales estimate and daily average

--- a/salesReport.html
+++ b/salesReport.html
@@ -45,6 +45,11 @@
                     <button id="search">Actualizar</button>
                 </div>
 
+                <div id="promedios">
+                    <h4>Promedio Diario: <span id="daily-average"></span></h4>
+                    <h4>Est. Fin de mes: <span id="monthly-estimate"></span></h4>
+                </div>
+
                 <div id="chart_div" style="width:120%; height:300px;"></div>
 
                 <div style="display: flex; width: 100%; align-items: center; margin-top: 16px; justify-content: center;">
