--- a/salesReport.html
+++ b/salesReport.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             
-                <ul id="sales-list" style="height: 250px; background-color: rgb(240, 240, 240); width: 100%; border-radius: 10px; overflow: scroll; padding: 10px; margin-top: 10px;"> 
+                <ul id="sales-list" style="height: 200px; background-color: rgb(240, 240, 240); width: 100%; border-radius: 10px; overflow: scroll; padding: 10px; margin-top: 10px; padding-bottom: 20px;"> 
                     
                 </ul>
 
