--- a/sell.html
+++ b/sell.html
@@ -58,8 +58,8 @@
             <div style="padding-left: 20px; width: 60px; text-align: center;"><h4>Total:</h4><h4 id="order-total">0</h4></div>
         </div>
         
-        <div style="z-index: 10; position: relative; overflow: scroll; height: max-content; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;  border-top-left-radius: 20px;">
-            <ul id="product-list" style="list-style: none; padding: 0px;"> 
+        <div style="z-index: 10; position: relative; overflow: scroll; height: max-content; padding-bottom: 0px; padding-left: 10px; padding-right: 10px;  border-top-left-radius: 20px; text-align: center;">
+            <ul id="product-list" style="list-style: none; padding: 0px; text-align: center;"> 
             </ul>
         </div>
 
