fixed iso date wrong, added indexes

--- a/salesReport.html
+++ b/salesReport.html
@@ -58,9 +58,9 @@
                     <div>
                             <h5>Calientes: <span id="resumen-caliente"></span></h5>
                             <h5>Frios: <span id="resumen-frio"></span></h5>
-                            <h5>Pasteles: <span id="resumen-postre"></span></h5>
+                            <h5>Pasteles: <span id="resumen-pastel"></span></h5>
                             <h5>Bebidas: <span id="resumen-bebidas"></span></h5>
-                            <h5>Varios: <span id="resumen-extras"></span></h5>
+                            <h5>Varios: <span id="resumen-varios"></span></h5>
                         </div>
                 </div>
                 
