--- a/sell.html
+++ b/sell.html
@@ -28,7 +28,7 @@
                 </button>
             </div>
             <div id="header-1">
-                <button class="header-icon-button" onclick="getCorte()" onmouseover="document.getElementById('filter-icon').style.filter = 'invert()'" onmouseover="document.getElementById('filter-icon').style.filter = 'invert()'" onmouseleave="document.getElementById('filter-icon').style.filter = 'none'">
+                <button class="header-icon-button" onclick="getCorte()">
                     <img class="icon" width="30px" style="margin: 0px; filter: invert(); mix-blend-mode: lighten;" src="https://www.pngfind.com/pngs/m/634-6341755_png-file-sales-data-icon-transparent-png.png">
                 </button>
             </div>
