--- a/salesReport.html
+++ b/salesReport.html
@@ -53,10 +53,10 @@
                 <div style="display: flex; width: 55%; height: 200px; gap: 0px; margin-left: 10px;">
                     <br>    
                         <div style="width: 160px; margin-left: 0px;">
-                            <h4>Calientes: <span id="resumen-caliente"></span></h4>
+                            <h4>Cltes: <span id="resumen-caliente"></span></h4>
                             <h4>Frios: <span id="resumen-frio"></span></h4>
-                            <h4>Pasteles: <span id="resumen-pastel"></span></h4>
-                            <h4>Bebidas: <span id="resumen-bebidas"></span></h4>
+                            <h4>Pastel: <span id="resumen-pastel"></span></h4>
+                            <h4>Bebida: <span id="resumen-bebidas"></span></h4>
                             <h4>Varios: <span id="resumen-varios"></span></h4>
 
                            
